--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
     <br>
     <br>
     <div class="footer">
-      <p>&copy; 2023 Chards Bot - For educational purposes only. No infringement intended.</p>
+      <p>&copy; 2024 Copyright by vixeenn | For educational purposes only. No infringement intended.</p>
     </div>
   </div>
   <script>
