--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Chards-Bot">
   <meta name="description" content="Get Cookie/Appstate through UserID and Password!">
-  <link rel="icon" href="https://i.postimg.cc/0QY6ctyj/CHARDS-BOT.png" type="image/png">
+  <link rel="icon" href="https://i.postimg.cc/3R07MRcy/b2ef689d1f387dfc949d0f63c3865441.jpg" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>: 𝗔𝗣𝗣𝗦𝗧𝗔𝗧𝗘</title>
+  <title>𝗔𝗣𝗣𝗦𝗧𝗔𝗧𝗘 || 𝗧𝗢𝗞𝗘𝗡 𝗚𝗘𝗧𝗧𝗘𝗥</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
